[package]
name = "ontime"
version = "0.1.0"
authors = ["sizumita <sumito@izumita.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "gateway", "rustls_backend", "unstable_discord_api", "cache", "model"]
default-features = false

[dependencies.tokio]
version = "1.12.0"
features = ["full"]
